# rag-retrieval-platform

./: .env.example  .gitignore  CLAUDE.md  COST.md  FINAL-REPORT.md  README.md  RESULTS.md  bootstrap.bat  bootstrap.sh  pyproject.toml  run.py
docs/: ARCHITECTURE.md  BENCHMARK.md  CONTINUE.md  COST.md  DEFENSE.md  DESIGN-SESSION.md  JOURNEY.md  TRADEOFFS.md
docs/superpowers/plans/: 2026-04-22-retrieval-platform.md
scripts/: analyze_bm25_wins.py  diagnose_precision.py  eval_by_type.py  fetch_supplementary.py  ingest.py  preflight.py  run_all_experiments.py  run_eval.py
src/rag/: __init__.py  config.py  constants.py  types.py
src/rag/api/: app.py  schemas.py
src/rag/eval/: harness.py  metrics.py  qrels.py  reports.py
src/rag/index/: bm25_index.py  vector_index.py
src/rag/ingest/: chunking.py  loaders.py  manifest.py  pipeline.py
src/rag/retrieve/: embedder.py  fusion.py  reranker.py  search.py
tests/: test_api.py  test_chunking.py  test_fusion.py  test_metrics.py
