[project]
name = "rag-retrieval-platform"
version = "0.1.0"
description = "Production-grade retrieval platform: hybrid BM25+semantic+rerank, 1000+ docs, eval harness"
requires-python = ">=3.11"

dependencies = [
    # Core retrieval
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26,<2.0",

    # Document loading
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",

    # Data / eval
    "datasets>=2.18.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",

    # Http (for arXiv PDF download in preflight)
    "httpx>=0.27.0",

    # Azure (optional generation only)
    "openai>=1.30.0",

    # Dev
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
